--- a/style.css
+++ b/style.css
@@ -48,3 +48,19 @@ section {
 #login-with-facebook-btn {
   margin-top: 10px;
 }
+#profile-picture-image {
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  margin-bottom: 15px;
+}
+
+#profile-picture-image:hover {
+  opacity: 0.9;
+  border: 5px solid black;
+  cursor: pointer;
+}
+
+#update-image-file-input {
+  display: none;
+}
